--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js"/></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ key }}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key={{ key }}"></script>
     <script  src="{{ url_for('static', filename='scripts/geolocation-marker.js') }}"></script>
     <script  src="{{ url_for('static', filename='scripts/content.js') }}"></script>
     <script  src="{{ url_for('static', filename='scripts/mapstyles.js') }}"></script>
