--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,2 +1,145 @@
-
 {% extends "base.html" %}
+{% block content %}
+  <div class="ui link cards">
+    <div class="card">
+      <div class="image">
+        <img src="static/img/andy.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Andy Nguyen</div>
+        <div class="meta">
+          <a>Undergrad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          andy21996@csu.fullerton.edu
+        </span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image">
+        <img src="static/img/austin.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Austin Draper</div>
+        <div class="meta">
+          <a>Undergrad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          austindraper@csu.fullerton.edu
+        </span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image">
+        <img src="static/img/saliya.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Saliya Mach</div>
+        <div class="meta">
+          <a>Undergrad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          smach839@csu.fulleton.edu
+        </span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image">
+        <img src="static/img/trung.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Trung Ngo</div>
+        <div class="meta">
+          <a>Undergrad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          ndtrung95@csu.fullerton.edu
+        </span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image">
+        <img src="static/img/asit.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Asit Kumar Dash</div>
+        <div class="meta">
+          <a>Grad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          asitdash@csu.fullerton.edu
+        </span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image">
+        <img src="static/img/vanchhit.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Vanchhit Khare</div>
+        <div class="meta">
+          <a>Grad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          khare.van08@csu.fullerton.edu
+        </span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image">
+        <img src="static/img/yashdeep.jpeg">
+      </div>
+      <div class="content">
+        <div class="header">Yashdeep Kajal</div>
+        <div class="meta">
+          <a>Grad Student</a>
+        </div>
+        <div class="description">
+
+        </div>
+      </div>
+      <div class="extra content">
+        <span>
+          <i class="user icon"></i>
+          yashdeepk@csu.fullerton.edu
+        </span>
+      </div>
+    </div>
+  </div>
+{% endblock %}
