--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,5 @@
 html,
       body {
-
           height: 100%;
           margin: 0;
           overflow: hidden;
@@ -10,22 +9,26 @@ html,
           overflow: visible !important;
       }
 
-
+      #content {
+        overflow: hidden;
+      }
 
       ::placeholder { /* Chrome/Opera/Safari */
         color: #909;
       }
 
       #destination {
-
           flex-grow: 1;
           margin-top: 6px;
       }
 
       #infocard {
           position: absolute;
-          left: 80%;
-          top: 10%;
+          padding: 14px;
+          overflow: auto;
+          max-height: 600px;
+          left: 82%;
+          top: 4%;
           z-index: 1;
       }
 
