lot r and meet the team page updated

--- a/app/templates/campusmap.html
+++ b/app/templates/campusmap.html
@@ -417,6 +417,12 @@
                   <button class="ui positive button" id="PI-direction">Direction</button>
               </div>
 
+              <div class="ui buttons" id="PR">
+                  <button class="ui button pbuildings marker" id="PR-btn" value="{{ getCoords('PR') }}" type="button"><i class="teal car icon"></i>Parking Lot R</button>
+                  <div class="or"></div>
+                  <button class="ui positive button" id="PR-direction">Direction</button>
+              </div>
+
               <div class="ui buttons" id="PS">
                   <button class="ui button pbuildings marker" id="PS-btn" value="{{ getCoords('PS') }}" type="button"><i class="teal car icon"></i>Parking Lot S</button>
                   <div class="or"></div>
