--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -81,6 +81,10 @@
         </span>
       </div>
     </div>
+  </div>
+
+
+  <div class="ui link cards">
     <div class="card">
       <div class="image">
         <img src="static/img/asit.jpeg">
