--- a/app/templates/campusmap.html
+++ b/app/templates/campusmap.html
@@ -667,44 +667,75 @@
 
   </div>
 </form>
-  <div id="legendmodal" class="ui modal">
-         <p><strong>Education Buildings</strong><br>
-           CC - Children's Center|| CS - Computer Science|| CPAC - Clayes Performing Arts Center||
-           DBH - Dan Black Hall|| EC - Education Classroom|| E - Engineering|| H - Humanities & Social Science || KHS - Kinesiology & Health Science|| LH - Langsdorf Hall
-           || MH - McCarthy Hall|| PL - Pollak library|| PLS - Pollak Library South|| RGC - Ruby Gerontology Center
-           || SGMH - Steven G. Mihalyo|| UH - University Hall|| VA - Visual Arts</p>
-        <p><strong>Food & Dining</strong><br>
-           BE - Baja Fresh|| CJ - Carl's Jr|| GA - Gastronome|| JU - Juice It Up|| PEX - Panda Express||
-           MST - Mihaylo Starbucks|| PLST - Pollak Library Starbucks|| TSUST - TSU Starbucks||
-           CPT - College Park Togos|| TSUT - TSU Togos</p>
-           <p><strong>ATM & Bank</strong><br>
-            BOFA - BOFA Bank ATM|| CATM - Chase ATM|| WATM - Wells Fargo ATM|| USB - US Bank Branch</p>
-            <p><strong>Landmarks</strong><br>
-            BA - Becker Amphitheater|| ECSQ - ECS Quad|| Q - Quad|| TW - Titan Walk</p>
-            <p><strong>Facilities</strong><br>
-            EHS - Environment Health & Safety|| TRI - Trigen|| P - Parking and Transportation Office</p>
-            <p><strong>Parking Structures</strong><br>
-            PA - Parking Lot A|| PAS - Parking Lot A-South|| PC - Parking Lot C|| PCE - Parking Lot C-East
-            || PCW - Parking Lot C-West|| PE - Parking Lot E|| PF - Parking Lot F|| PG - Parking Lot G||
-            PH - Parking Lot H|| PI - Parking Lot I|| PS - Parking Lot S|| AP - Arboritum Parking||
-            CPFSP - CPFS Parking|| DDP - Dumbo Down Parking|| EPS - Eastside Parking Structure||
-            NPS - Nutwood Parking Structure|| SCPS - Stage College Parking</p>
-            <p><strong>Corporation Yard</strong><br>
-            AS - Automobile Shop|| CSH - Carpenter Shop|| MC - Mailing Center|| SR - Shipping & Recieving</p>
-            <p><strong>Administrative Building</strong><br>
-            CP - College Park|| CPW - College Park West</p>
-            <p><strong>Student Services</strong><br>
-            ARSC - Admission and Records Service Center|| CRC - Career Center|| RH - Resident Hall||
-            SH - Student Housing|| SRC - Student Recreation Center</p>
-            <p><strong>Titan Pride</strong><br>
-            G - Golleher Alumni House || TG - Titan Gymnasium|| TH - Titan House|| TROTC - Titan ROTC|| TSH - Titan Shop
-            || TSU - Titan Student Union</p>
-            <p><strong>Titan Sports Complex</strong><br>
-            TST - Titan Stadium|| GF - Goodwin Field|| AF - Anderson Field</p>
-            <p><strong>Emergency</strong><br>
-            SHCC - Student Health & Counseling Center|| UP - University Police
-         </p>
-  </div>
+    <div id="legendmodal" class="ui modal">
+      <h4 class="ui horizontal divider header">
+        <i class="teal bar chart icon"></i>Abbreviation - Building Name [<--Legend-->]
+      </h4>
+
+        <div class="ui four column grid">
+          <div class="column">
+              <p>
+                <p><i class="teal book icon"></i><strong>Education Buildings</strong><br></p><p>CC - Children's Center</p> <p>CS - Computer Science</p> <p>CPAC - Clayes Performing Arts Center</p> <p> DBH - Dan Black Hall</p> <p> EC - Education Classroom</p> <p> E - Engineering</p> <p> H - Humanities & Social Science </p> <p> KHS - Kinesiology & Health Science</p> <p> LH - Langsdorf Hall</p> <p> MH - McCarthy Hall</p>
+                <p> PL - Pollak library</p> <p> PLS - Pollak Library South</p> <p> RGC - Ruby Gerontology Center</p> <p> SGMH - Steven G. Mihalyo</p> <p> UH - University Hall</p> <p> VA - Visual Arts</p>
+             </p>
+          </div>
+          <div class="ui vertical divider"></div>
+           <div class="column">
+             <p>
+              <p><i class="teal users icon"></i><strong>Food & Dining</strong><br></p><p>BE - Baja Fresh</p> <p> CJ - Carl's Jr</p> <p> GA - Gastronome</p> <p> JU - Juice It Up</p> <p> PEX - Panda Express</p> <p>MST - Mihaylo Starbucks </p> <p>PLST - Pollak Library Starbucks</p> <p> TSUST - TSU Starbucks</p> <p>CPT - College Park Togos</p> <p> TSUT - TSU Togos</p>
+             <div class="ui fitted divider"></div>
+             <div class="ui fitted divider"></div>
+             <p><i class="teal credit card icon"></i><strong>ATM & Bank</strong><br></p><p>BOFA - BOFA Bank ATM</p><p>CATM - Chase ATM</p><p>WATM - Wells Fargo ATM</p><p>USB - US Bank Branch</p>
+           </p>
+           </div>
+           <div class="column">
+             <p>
+               <p><i class="teal magnet icon"></i><strong>Landmarks</strong><br></p><p>BA - Becker Amphitheater</p> <p> ECSQ - ECS Quad</p> <p> Q - Quad</p> <p> TW - Titan Walk</p>
+               <div class="ui fitted divider"></div>
+               <div class="ui fitted divider"></div>
+               <p><i class="teal recycle icon"></i><strong>Facilities</strong><br></p><p>EHS - Environment Health & Safety</p> <p> TRI - Trigen</p> <p> P - Parking and Transportation Office</p>
+               <div class="ui fitted divider"></div>
+               <div class="ui fitted divider"></div>
+               <p><i class="teal search icon"></i><strong>Corporation Yard</strong><br></p><p>AS - Automobile Shop </p><p> CSH - Carpenter Shop</p><p> MC - Mailing Center</p><p>SR - Shipping & Recieving</p>
+              <div class="ui fitted divider"></div>
+              <div class="ui fitted divider"></div>
+              <p><i class="teal laptop icon"></i><strong>Administrative Building</strong><br></p><p>CP - College Park</p><p>CPW - College Park West</p>
+             </p>
+          </div>
+          <div class="column">
+            <p>
+              <p><i class="teal car icon"></i><strong>Parking Structures</strong><br></p><p> PA - Parking Lot A</p><p> PAS - Parking Lot A-South</p><p> PC - Parking Lot C</p><p> PCE - Parking Lot C-East</p><p> PCW - Parking Lot C-West</p><p> PE - Parking Lot E</p><p> PF - Parking Lot F</p><p> PG - Parking Lot G</p><p>PH - Parking Lot H</p><p> PI - Parking Lot I</p><p> PR - Parking Lot R</p><p> PS - Parking Lot S</p>
+              <p> AP - Arboritum Parking</p> <p>CPFSP - CPFS Parking</p><p> DDP - Dumbo Down Parking</p><p> EPS - Eastside Parking Structure</p><p>NPS - Nutwood Parking Structure</p><p> SCPS - Stage College Parking
+          </p>
+         </div>
+        </div>
+
+         <div class="ui fitted divider"></div>
+         <div class="ui fitted divider"></div>
+
+         <div class="ui four column grid">
+           <div class="column">
+             <p>
+               <p><i class="teal thumbs up icon"></i><strong>Student Services</strong><br></p><p>ARSC - Admission and Records Service Center</p><p> CRC - Career Center</p><p> RH - Resident Hall</p><p> SH - Student Housing</p><p> SRC - Student Recreation Center</p>
+           </p>
+           </div>
+            <div class="column">
+              <p>
+                <p><i class="teal spinner icon"></i><strong>Titan Pride</strong><br></p><p>G - Golleher Alumni House</p><p> TG - Titan Gymnasium</p><p>  TH - Titan House</p><p> TROTC - Titan ROTC</p><p> TSH - Titan Shop</p><p>TSU - Titan Student Union</p>
+              </p>
+            </div>
+            <div class="column">
+              <p>
+                <p><i class="teal spinner icon"></i><strong>Titan Sports Complex</strong><br></p><p>TST - Titan Stadium</p><p> GF - Goodwin Field</p><p>AF - Anderson Field</p>
+              </p>
+            </div>
+            <div class="column">
+              <p>
+                <p><i class="teal plus icon"></i><strong>Emergency</strong><br></p><p>SHCC - Student Health & Counseling Center</p><p>UP - University Police</p>
+              </p>
+            </div>
+       </div>
+      </div>
   </div>
 {% endblock %}
 
